--- a/assets/css/scss/main.compiled.css
+++ b/assets/css/scss/main.compiled.css
@@ -16,17 +16,18 @@ body {
   font-weight: 300;
 }
 
-.navbar {
-  font-family: lato;
-}
-
-.navbar .nav {
-  font-size: 0.78rem;
-  letter-spacing: 3.5px;
-}
-
 .navbar .nav-item {
   padding: 0rem 1.8rem;
+  font-size: 0.79rem;
+  font-weight: 600;
+  letter-spacing: 3.1px;
+  transition: all .5s ease-in-out;
+}
+
+.navbar .nav-link:hover {
+  outline: 1px solid #FFD24C;
+  color: #FFD24C !important;
+  font-weight: 600;
 }
 
 .hero {
@@ -96,4 +97,36 @@ body {
     padding: 1rem;
     line-height: 0.95rem;
   }
+}
+
+.service-cards .card {
+  background: #f3f3f3 !important;
+  border: none;
+  transition: all .3s linear;
+  padding: 2rem 0.95rem;
+  border-radius: 0;
+  font-weight: 300;
+  font-size: 0.85rem;
+}
+
+.service-cards .card:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.service-cards .card:hover .service-cards__title {
+  color: #FFD24C;
+}
+
+.service-cards__icon {
+  font-size: 3.5rem;
+}
+
+.service-cards__title {
+  font-family: "Oswald", Sans-serif;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+.service-cards__text {
+  color: #4c4d4f;
 }
