--- a/assets/scss/scss/main.scss
+++ b/assets/scss/scss/main.scss
@@ -8,6 +8,11 @@
 @import "components/hero";
 @import "components/service-cards";
 @import "components/about";
+@import "components/button";
+@import "components/counter";
+@import "components/testimony";
+@import "components/contact-form";
+
 
 
 
