--- a/assets/scss/scss/components/_service-cards.scss
+++ b/assets/scss/scss/components/_service-cards.scss
@@ -1,10 +1,9 @@
 .service-cards {
    
     .card {
-        transition: all 0.1s ease-in;
         background: $color_white_alt!important;
         border: none;
-        padding: 2rem 0.95rem;
+        padding: 2rem 0.95rem 1rem;
         border-radius: 0;
         font-weight: 300;
         font-size: 0.85rem;
@@ -14,11 +13,17 @@
         }
         
         &:hover {
-            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+            box-shadow: 0px 0px 10px 0px rgba($color_black_alt,0.5);
         }
-             &:hover .service-cards__title {
+        &:hover .service-cards__title {
                 color: $color_primary_2;
+                transition: all .3s ease-in;
         }
+        
+        &__list {
+            line-height: 27.2px;
+            color: $color_gray;
+         }
     }
     &__icon {
         font-size: 3.5rem;
@@ -34,9 +39,5 @@
         }
 
     
-    }
-    &__text {
-        color: $color_gray;
-    }
-    
+    }    
 }
