--- a/assets/scss/scss/main.scss
+++ b/assets/scss/scss/main.scss
@@ -12,6 +12,7 @@
 @import "components/counter";
 @import "components/testimony";
 @import "components/contact-form";
+@import "components/footer";
 
 
 
