--- a/assets/scss/scss/components/_nav.scss
+++ b/assets/scss/scss/components/_nav.scss
@@ -1,14 +1,21 @@
 .navbar {
     .nav {
         &-item {
-            padding: 0rem 1.8rem;
-            font-size: 0.79rem;
-            font-weight: 600;
-            letter-spacing: 3.1px;
-            transition: all .5s ease-in-out;
+            margin: 0rem 3rem 0rem 0rem;
+            border-style: solid;
+            border-width: 4px 0px 0px 0px;
+            border-color: rgba(34,34,34,0);
         }
         
-        &-link { 
+        &-link {            
+            display: inline-block!important;
+            padding: 1rem 2rem;
+            font-size: 12px;
+            font-weight: 400;
+            text-transform: uppercase;
+            line-height: 15px;
+            letter-spacing: 5.1px;
+            transition: all .5s ease-in-out;
             &:hover {
              outline: 1px solid $color_primary_2;
              color:$color_primary_2!important;
