--- a/assets/scss/scss/components/_service-cards.scss
+++ b/assets/scss/scss/components/_service-cards.scss
@@ -1,7 +1,7 @@
 .service-cards {
    
     .card {
-        background: $color_white_alt!important;
+        background: $color_white!important;
         border: none;
         padding: 1rem 0.95rem 0.5rem;
         border-radius: 0;
