--- a/assets/scss/scss/main.scss
+++ b/assets/scss/scss/main.scss
@@ -11,8 +11,11 @@
 @import "components/button";
 @import "components/counter";
 @import "components/testimony";
+@import "components/top-banner";
 @import "components/contact-form";
 @import "components/footer";
+
+@import "pages/about";
 
 
 
