--- a/assets/scss/scss/components/_hero.scss
+++ b/assets/scss/scss/components/_hero.scss
@@ -1,10 +1,11 @@
 .hero {
-background-image: linear-gradient(to bottom, rgba($color_black_alt, .85), rgba($color_black, .95)), url('https://i.ibb.co/f9zmC1b/you-x-ventures-Oalh2-Moj-Uuk-unsplash-1.jpg');
+    background-image: linear-gradient(to bottom, rgba($color_black_alt, .85), rgba($color_black, .95)), url('https://i.ibb.co/f9zmC1b/you-x-ventures-Oalh2-Moj-Uuk-unsplash-1.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: top center;
-    
     height: 35rem;
+    
+
 
     &__heading {
         color: $color_white;
@@ -15,7 +16,7 @@ background-image: linear-gradient(to bottom, rgba($color_black_alt, .85), rgba($
         letter-spacing: 12px;            
         text-transform: uppercase;
 
-                   
+        
         @include respond(phone) {
             font-size: 0.7rem;
             padding: 0rem 3rem;
@@ -59,5 +60,13 @@ background-image: linear-gradient(to bottom, rgba($color_black_alt, .85), rgba($
             line-height: 0.95rem;
         } 
       } 
+    }
+    
+    &--about {
+        background-image: linear-gradient(to bottom, rgba($color_black_alt, .55), rgba($color_black, .55)), url('https://i.ibb.co/LgcMpLt/download-force-true-w-1920.jpg');
+        background-attachment: scroll;
+        background-position: center bottom;
+        height: 23rem;
+        
     }
 }
